// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders correctly 1`] = `
<nav
  className="Header"
>
  <div
    className="HeaderGroup "
  >
    <Link
      to="/"
    >
      <div>
        <img
          alt="Purrfect Match Logo"
          id="logo"
          src="test-file-stub"
        />
      </div>
      <div>
        <p
          className="purrfectMatch"
        >
          Purrfect Match
        </p>
      </div>
    </Link>
    <button>
      <Link
        id="successStoriesLink"
        to="success"
      >
        Success Stories
      </Link>
    </button>
    <button>
      <Link
        id="contactLink"
        to="contact"
      >
        Contact Us
      </Link>
    </button>
  </div>
</nav>
`;

exports[`Renders correctly 2`] = `
<nav
  className="Header HeaderScrolled"
>
  <div
    className="HeaderGroup "
  >
    <Link
      to="/"
    >
      <div>
        <img
          alt="Purrfect Match Logo"
          id="logo"
          src="test-file-stub"
        />
      </div>
      <div>
        <p
          className="purrfectMatch"
        >
          Purrfect Match
        </p>
      </div>
    </Link>
    <button>
      <Link
        id="successStoriesLink"
        to="success"
      >
        Success Stories
      </Link>
    </button>
    <button>
      <Link
        id="contactLink"
        to="contact"
      >
        Contact Us
      </Link>
    </button>
  </div>
</nav>
`;
